# ctrader-open-api-async

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FORK_INSTRUCTIONS.md  LICENSE  MANIFEST.in  OAuth_GUIDE.md  QUICKSTART_OAUTH.md  README.md  ctrader_async_connector.py  ctrader_connector.py  pyproject.toml  requirements.txt  setup.py  test_ctrader.py  test_full_async.py
.github/workflows/: ci.yml
Doc/: Task_0_MVP_Implementation.md
ctrader_open_api_async/: __init__.py  auth.py  client.py  endpoints.py  protobuf.py  tcp_protocol.py
ctrader_open_api_async/messages/: OpenApiCommonMessages_pb2.py  OpenApiCommonModelMessages_pb2.py  OpenApiMessages_pb2.py  OpenApiModelMessages_pb2.py
examples/: README.md  basic_usage.py  oauth_auth_example.py  simple_oauth_example.py
scripts/: prepare_release.py
tests/: __init__.py  conftest.py  test_client.py
